@@ -27,6 +27,8 @@ MASTERSIZE 52
 ATTACHASIDE 1
 # if new window is in the stack add it at the top
 TOPSTACK 1
+# if in stacking mode center window # (1) is best for gimp
+CENTER_STACK 0
 # default tiling modes for each desktop(defaults to 0):
 #     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
 DEFAULTMODE 3;4;0;1;2;3;
